# E0230-CMO-2025

./: .gitignore  README.md
Algorithms/: README.md
Algorithms/Julia/: oracle.jl
Algorithms/Julia/cmo/: Manifest.toml  Project.toml
Assignments/Assignment-0/: README.md
Assignments/Assignment-0/Codes/: CMO2025A0_24233.py  pyproject.toml
Assignments/Assignment-0/TeX/: main.tex  refs.bib
Assignments/Assignment-1/: README.md
Assignments/Assignment-1/Codes/: CMO2025A1_24233.csv  CMO2025A1_24233.py  pyproject.toml
Assignments/Assignment-1/Codes/oracle_2025A1/: oracle_2025A1.py
Assignments/Assignment-1/Codes/oracle_2025A1/pyarmor_runtime_000000/: __init__.py
Assignments/Assignment-1/TeX/: main.tex  q1.tex  q2.tex  q3.tex
Assignments/Assignment-2/: README.md
Assignments/Assignment-2/Codes/: CMO2025A2_24233.py  M_24233.txt  dlist_24233.txt  plist_24233.txt  pyproject.toml
Assignments/Assignment-2/Codes/oracle_2025A2_py310/: README.md  oracle_final.py
Assignments/Assignment-2/Codes/oracle_2025A2_py310/pyarmor_runtime_000000/: __init__.py
Assignments/Assignment-2/Codes/oracle_CMO2025A2_py310/: README.md  oracle_final_CMOA2.py
Assignments/Assignment-2/Codes/oracle_CMO2025A2_py310/pyarmor_runtime_000000/: __init__.py
Assignments/Assignment-3/: README.md
Assignments/Assignment-3/Codes/: CMO2025A3_24233.py  data_24233.csv  pyproject.toml
Assignments/Assignment-3/Codes/oracle_2025A3/: oracle_2025A3.py
Assignments/Assignment-3/Codes/oracle_2025A3/pyarmor_runtime_000000/: __init__.py
TeX/: .chktexrc  knowledge.tex  macros.tex  main.tex
TeX/figures/heron/: _.tex
TeX/sections/: constrained.tex  introduction.tex  notation.tex  preliminaries.tex  prerequisites.tex  references.bib  taylor.tex  titlepage.tex  unconstrained.tex
(+57 files in other folders)
