[project]
name = "CMO2025A1"
version = "0.1.0"
description = "E0230-CMO-2025 Assignment-1"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "scipy>=1.15.3",
]
