[project]
name = "CMO2025A2"
version = "0.1.0"
description = "E0230-CMO-2025 Assignment-2"
authors = [{ name = "Ashrith Sagar", email = "ashrithy@iisc.ac.in" }]
readme = "../README.md"
requires-python = "==3.10.*"
dependencies = [
    "cvxpy>=1.7.3",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
